# surfsara-cli-args-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  example.cpp  example_01.cpp  example_02.cpp
build-test-clang/: make.sh
build-test-gcc/: .gitignore  make.sh
include/: cli.h  cli_argument.h  cli_converter.h  cli_doc.h  cli_flag.h  cli_multiple_flag.h  cli_multiple_value.h  cli_parser.h  cli_positional_multiple_value.h  cli_positional_value.h  cli_value.h
tests/: test_argument.cpp  test_flag.cpp  test_multiple_flag.cpp  test_multiple_value.cpp  test_parser.cpp  test_value.cpp
